<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/info_title"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:text="@string/info_text_title"/>

        <TextView
            android:id="@+id/info_body"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            tools:text="@string/info_text_body"/>

        <TextView
            android:id="@+id/chip_text_view_label"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/label_chip_text_view"/>

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/nacho_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_chip_text_view"/>

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/nacho_text_view_with_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_chip_text_view_with_icons"/>

        <Button
            android:id="@+id/list_chip_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list_chip_values"/>

        <Button
            android:id="@+id/list_chip_and_token_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list_chip_and_token_values"/>

        <Button
            android:id="@+id/to_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_string"/>

        <TextView
            android:id="@+id/focusable_text_view"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/btn_steal_focus"/>

    </LinearLayout>

</ScrollView>